# tk-sputnik.org

./: .dockerignore  .env  .env.example  .flake8  .gitignore  .mise.toml  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  todo_kolco24.md
.github/workflows/: ci.yml  django.yml
apps/accounts/: forms.py  urls.py  views.py
apps/challenge/: admin.py  apps.py  models.py  scoring.py  tests.py  urls.py  views.py
apps/challenge/migrations/: 0001_initial.py  0002_sourcemessage_datetime.py
apps/contributors/: admin.py  models.py  tests.py  urls.py  views.py
apps/contributors/migrations/: 0001_initial.py
apps/demo/: tests.py  urls.py  views.py
apps/forum/: admin.py  models.py  tests.py  urls.py  views.py
apps/forum/migrations/: 0001_initial.py  0002_forumuser.py  0003_topic_post.py
apps/forum/templatetags/: forum_extras.py
apps/forum_import/: README.md  apps.py  tests.py
apps/forum_import/mysql_legacy_backend/: base.py
base/: asgi.py  settings.py  urls.py
config/: settings.py  tests.py  urls.py
deploy/: .env.example  docker-compose.yml  nginx.conf  sputnik.env.example
docs/plans/: 2025-04-21-add-deployment-files.md  20260424-contributors-app.md  20260512-phpbb-import-infrastructure.md  20260513-forum-app.md  20260514-import-phpbb-users.md  20260514-phpbb-import-topics-posts.md  20260514-subforum-topic-list.md  20260515-forum-topic-posts.md  20260516-challenge-app.md  20260516-fix-phpbb-smilies-markers.md  20260516-member-detail-page.md  20260516-member-workout-edit-delete.md
docs/plans/completed/: 20260424-contributors-app.md  20260513-forum-app.md  (+10 more)
forum/: urls.py  views.py
forum/templates/: forum_demo.html
(+24 files in other folders)
